load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template_rule")

expand_template_rule(
  name = "compile_time_settings",
  out = "include/everest/compile_time_settings.hpp",
  template = "include/compile_time_settings.hpp.bazel.in",
  substitutions = {
	"{{EVEREST_INSTALL_PATH}}": "asfdasdfasdfasdf"
  }
)

cc_library(
  name = "framework",
  hdrs = glob(["include/**/*.hpp"]) + [":compile_time_settings"],
  srcs = glob(["lib/*.cpp"]),
  deps = [
    "@com_github_everest_liblog//:liblog",
    "@com_github_HowardHinnant_date//:date",
    "@nlohmann_json//:json",
    "@fmt//:fmt",
    "@com_github_biojppm_rapidyaml//:ryml",
    "@com_github_pboettch_json-schema-validator//:json-schema-validator",
    "@com_github_LiamBindle_mqtt-c//:libmqtt",
    "@boost//:uuid",
    "@boost//:program_options",
  ],
  strip_include_prefix = "include",
)

cc_library(
  name = "controller-ipc",
  srcs = glob(["src/controller/*.cpp"]),
  hdrs = glob(["src/controller/*.hpp"]),
  deps = [
    "@nlohmann_json//:json",
    "@fmt//:fmt",
    "@com_github_biojppm_rapidyaml//:ryml",
    "@com_github_everest_liblog//:liblog",
    ":framework",
    "@com_github_warmcatt_libwebsockets//:libwebsockets",
  ],
  strip_include_prefix = "src",
)

cc_binary(
  name = "manager",
  srcs = [
    "src/manager.cpp"
  ],
  deps = [
    "@com_github_everest_liblog//:liblog",
    "@fmt",
    ":framework",
    "@com_github_pboettch_json-schema-validator//:json-schema-validator",
    ":controller-ipc",
    "@boost//:program_options",
  ]
)
