workspace(name = "com_github_everest_everest-framework")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

load("//bazel:repos.bzl", "everest_framework_repos")
everest_framework_repos()

load("//bazel:deps.bzl", "everest_framework_deps")
everest_framework_deps()
